fixed avatar spacing

--- a/index.css
+++ b/index.css
@@ -23,12 +23,16 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 700;
     font-size: 22px;
+    line-height: 50px;
+    
 }
 
 .location {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     font-size: 20px;
+    line-height: 30px;
+    
 }
 
 .icons {
